Modificado los colores de las gráficas #51